force-app/main/default/objects/Component_Pricing__c/Component_Pricing__c.object-meta.xml
<CustomObject>
    <label>Component Pricing</label>
    <nameField>
        <label>Component Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Component Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>