force-app/main/default/objects/Component_Pricing__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>OR(AND(QTY_Sold__c   &gt;=  Min_Pax__c ,QTY_Sold__c  &lt;= Max_Pax__c),
AND(QTY_Sold__c   &gt;=  Min_Pax__c ,ISNULL(Max_Pax__c)),
AND(ISNULL(Max_Pax__c),ISNULL(Min_Pax__c)))</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>