force-app/main/default/objects/Component_Pricing__c/fields/Actual_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Rate__c</fullName>
    <formula>Component__r.Product_FX_Pricing__r.Actual_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>