force-app/main/default/objects/Component_Pricing__c/fields/Adult__c.field-meta.xml
<CustomField>
    <fullName>Adult__c</fullName>
    <formula>Component__r.Sub_Options__r.Adult__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adult</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>