force-app/main/default/objects/Component_Pricing__c/fields/Booking_Date_from__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date_from__c</fullName>
    <label>Booking Date from</label>
    <type>Date</type>
</CustomField>