force-app/main/default/objects/Component_Pricing__c/fields/Booking_Date_to__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date_to__c</fullName>
    <label>Booking Date to</label>
    <type>Date</type>
</CustomField>