force-app/main/default/objects/Component_Pricing__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <formula>Component__r.Sub_Options__r.Child__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>