force-app/main/default/objects/Component_Pricing__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <formula>TEXT(Component__r.Component_Type__c)</formula>
    <label>Component Type</label>
    <type>Text</type>
</CustomField>