force-app/main/default/objects/Component_Pricing__c/fields/Costed_FX_Rate__c.field-meta.xml
<CustomField>
    <fullName>Costed_FX_Rate__c</fullName>
    <label>Costed FX Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>