force-app/main/default/objects/Component_Pricing__c/fields/Date_To__c.field-meta.xml
<CustomField>
    <fullName>Date_To__c</fullName>
    <label>Travel Date To</label>
    <type>Date</type>
</CustomField>