force-app/main/default/objects/Component_Pricing__c/fields/Deal_D_O_S__c.field-meta.xml
<CustomField>
    <fullName>Deal_D_O_S__c</fullName>
    <formula>Component__r.Deal_D_O_S__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal(D/O/S)</label>
    <type>Text</type>
</CustomField>