force-app/main/default/objects/Component_Pricing__c/fields/If_currency_is_mismatch__c.field-meta.xml
<CustomField>
    <fullName>If_currency_is_mismatch__c</fullName>
    <formula>IF(TEXT(CurrencyIsoCode) !=  TEXT(Component__r.CurrencyIsoCode), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>If currency is mismatch</label>
    <type>Checkbox</type>
</CustomField>