force-app/main/default/objects/Component_Pricing__c/fields/Is_Min_or_Max_Price__c.field-meta.xml
<CustomField>
    <fullName>Is_Min_or_Max_Price__c</fullName>
    <formula>IF( Min_Pax__c=0 ,&apos;MinPax&apos;,   IF(Max_Pax__c=0,&apos;MaxPax&apos;,  IF( (Min_Pax__c = Component__r.Max_Min_Pax__c)  , &apos;MaxPax&apos; ,  IF(Min_Pax__c = Component__r.Min_Pax__c, &apos;MinPax&apos;,&apos;NotApplicable&apos;) ) )   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Min or Max Price</label>
    <type>Text</type>
</CustomField>