force-app/main/default/objects/Component_Pricing__c/fields/Join__c.field-meta.xml
<CustomField>
    <fullName>Join__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Join</label>
    <referenceTo>Join__c</referenceTo>
    <relationshipLabel>Component Pricing</relationshipLabel>
    <relationshipName>Component_Pricing</relationshipName>
    <type>Lookup</type>
</CustomField>