force-app/main/default/objects/Component_Pricing__c/fields/LinkedDeal_D_O_S__c.field-meta.xml
<CustomField>
    <fullName>LinkedDeal_D_O_S__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LinkedDeal(D/O/S)</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Component Pricing</relationshipLabel>
    <relationshipName>Component_Pricing</relationshipName>
    <type>Lookup</type>
</CustomField>