force-app/main/default/objects/Component_Pricing__c/fields/Max_Pax__c.field-meta.xml
<CustomField>
    <fullName>Max_Pax__c</fullName>
    <label>Max Pax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>