force-app/main/default/objects/Component_Pricing__c/fields/Min_Pax__c.field-meta.xml
<CustomField>
    <fullName>Min_Pax__c</fullName>
    <label>Min Pax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>