force-app/main/default/objects/Component_Pricing__c/fields/QTY_Sold__c.field-meta.xml
<CustomField>
    <fullName>QTY_Sold__c</fullName>
    <formula>Component__r.Allocations_Sold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QTY Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>