force-app/main/default/objects/Component_Pricing__c/fields/Related_Sales__c.field-meta.xml
<CustomField>
    <fullName>Related_Sales__c</fullName>
    <label>Related Sales</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>