force-app/main/default/objects/Component_Pricing__c/fields/solo_rate_total__c.field-meta.xml
<CustomField>
    <fullName>solo_rate_total__c</fullName>
    <inlineHelpText>This is the full cost of a solo traveller, not the additional fee on top of twin share rate.</inlineHelpText>
    <label>Solo Gross Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>