force-app/main/default/objects/Component_Pricing__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>