force-app/main/default/objects/Component_Pricing__c/validationRules/Date_To_greather_than_Date_from.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_To_greather_than_Date_from</fullName>
    <active>true</active>
    <errorConditionFormula>Date_From__c  &gt;  Date_To__c</errorConditionFormula>
    <errorMessage>Date To must be &gt; Date From</errorMessage>
</ValidationRule>