force-app/main/default/objects/Component_Pricing__c/validationRules/isCurrencyALL.validationRule-meta.xml
<ValidationRule>
    <fullName>isCurrencyALL</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
    Component__r.Currency_Type__c = &apos;ALL&apos;, 
    NOT(
      OR(
        ISPICKVAL(CurrencyIsoCode, &apos;AUD&apos;), 
        ISPICKVAL(CurrencyIsoCode, &apos;NZD&apos;) 
        ) 
    )
   )</errorConditionFormula>
    <errorMessage>Currency Type must be AUD or NZD</errorMessage>
</ValidationRule>