force-app/main/default/objects/Component_Pricing__c/validationRules/isCurrencyAUD.validationRule-meta.xml
<ValidationRule>
    <fullName>isCurrencyAUD</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Component__r.Currency_Type__c = &apos;AUD&apos;, NOT(ISPICKVAL(CurrencyIsoCode, &apos;AUD&apos;)))</errorConditionFormula>
    <errorMessage>Currency Type must be AUD</errorMessage>
</ValidationRule>