force-app/main/default/objects/Component_Pricing__c/validationRules/isCurrencyNZD.validationRule-meta.xml
<ValidationRule>
    <fullName>isCurrencyNZD</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Component__r.Currency_Type__c = &apos;NZD&apos;, NOT(ISPICKVAL(CurrencyIsoCode, &apos;NZD&apos;)))</errorConditionFormula>
    <errorMessage>Currency Type must be NZD</errorMessage>
</ValidationRule>