force-app/main/default/objects/Component_Pricing__c/validationRules/Pricing_currency_match.validationRule-meta.xml
<ValidationRule>
    <fullName>Pricing_currency_match</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(CurrencyIsoCode)  &lt;&gt;   TEXT(Component__r.CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Pricing currency should be same as Component Currency</errorMessage>
</ValidationRule>